--- a/stale.css
+++ b/stale.css
@@ -5,6 +5,7 @@ body{
     line-height: 1.5;
     background-color: #d33434;
     font-family: "Oswald", sans-serif;
+    color: aliceblue;
 }
 
 img{
